# fastcull

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
culler/: Cargo.toml  build.rs
culler-core/: Cargo.toml
culler-core/src/: apply.rs  decode.rs  fsops.rs  histogram.rs  lib.rs  model.rs  persist.rs  plan.rs  raw.rs  scan.rs  xmp.rs
culler-core/tests/: turbojpeg_probe.rs
culler-core/tests/fixtures/: README.md  make_orientation_6.py
culler/macos/: Info.plist.in  bundle-app.sh  make-dmg.sh  make-icns.sh
culler/src/: applyflow.rs  input.rs  main.rs  pipeline.rs  startup.rs  ui.rs
culler/ui/: app.slint  applydialog.slint  crashrecovery.slint  filmstrip.slint  globals.slint  hud.slint  keysheet.slint  loupe.slint  startup2a.slint  theme.slint  toast.slint
culler/ui/fonts/: LICENSE
docs/design/: 2026-07-08-darktable-integration-exploration.md  DESIGN.md  FastCull-UI.dc.html  FastCull-UI.rendered.html
docs/specs/: 2026-07-08-fastcull-design.md
docs/superpowers/plans/: 2026-07-13-raw-embedded-preview.md  2026-07-18-macos-port.md
docs/superpowers/plans/2026-07-08-fastcull/: README.md  phase-1-core-and-persistence.md  phase-2-scan.md  phase-3-xmp-and-plan.md  phase-4-apply-engine.md  phase-5-decode.md  phase-6-gui.md
docs/superpowers/specs/: 2026-07-13-hud-ux-batch-design.md  2026-07-13-raw-embedded-preview-design.md  2026-07-18-github-repo-cicd-design.md  2026-07-18-macos-port-design.md
