[package]
name = "culler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fastcull"
path = "src/main.rs"

[dependencies]
culler-core = { path = "../culler-core" }
slint = { version = "1.17", features = ["backend-winit", "renderer-skia"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }

[build-dependencies]
slint-build = "1.17"

[dev-dependencies]
tempfile = "3"
