[package]
name = "culler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fastcull"
path = "src/main.rs"

[dependencies]
culler-core = { path = "../culler-core" }
slint = { version = "1.17", features = ["backend-winit", "renderer-skia"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"

# rfd's Linux backend (xdg-desktop-portal) pulls in D-Bus (ashpd) and does NOT
# compile on macOS; macOS uses rfd's native AppKit NSOpenPanel backend, which is
# compiled unconditionally on Apple targets and needs no async-runtime feature.
# The synchronous FileDialog::pick_folder() in main.rs compiles under both.
[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }

[target.'cfg(target_os = "macos")'.dependencies]
rfd = { version = "0.15", default-features = false }

[build-dependencies]
slint-build = "1.17"

[dev-dependencies]
tempfile = "3"
